fix the vertical alignment of the host count in software table at smaller screen sizes (#7661)

--- a/frontend/pages/software/ManageSoftwarePage/_styles.scss
+++ b/frontend/pages/software/ManageSoftwarePage/_styles.scss
@@ -218,6 +218,7 @@
                 width: auto;
                 .hosts-cell__wrapper {
                   display: flex;
+                  align-items: center;
                   justify-content: space-between;
                   .hosts-cell__link {
                     display: flex;
